--- a/src/App/resources.qrc
+++ b/src/App/resources.qrc
@@ -6,7 +6,7 @@
         <file>Textures/voronoi.png</file>
     </qresource>
     <qresource prefix="/">
-        <file>Shaders/diffuse.fs</file>
-        <file>Shaders/diffuse.vs</file>
+        <file>Shaders/fragment.glsl</file>
+        <file>Shaders/vertex.glsl</file>
     </qresource>
 </RCC>
